[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
common = { path = "../common" }
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
risc0-zkvm = { version = "1.0.5", features = ['std'] }
serde = "1.0"
bincode = "1.3"
