[package]
name = "range_proof"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
num-bigint = {version = "0.4.4", features = [ "serde" ]}
num-traits = "0.2.16"
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }
common = { path = "../../common" }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }